skdep/force-app/main/default/objects/Monitor_Log__c/Monitor_Log__c.object-meta.xml
<CustomObject>
    <label>Monitor Log</label>
    <nameField>
        <label>Monitor Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitor Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>