skdep/force-app/main/default/objects/Monitor_Log__c/fields/Concern_Person__c.field-meta.xml
<CustomField>
    <fullName>Concern_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concern Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Monitor_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>