skdep/force-app/main/default/objects/Monitor_Log__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>TextArea</type>
</CustomField>