skdep/force-app/main/default/objects/Monitor_Log__c/fields/External_System_Name__c.field-meta.xml
<CustomField>
    <fullName>External_System_Name__c</fullName>
    <label>External System Name</label>
    <type>TextArea</type>
</CustomField>