skdep/force-app/main/default/objects/Monitor_Log__c/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <label>Headers</label>
    <type>TextArea</type>
</CustomField>