skdep/force-app/main/default/objects/Monitor_Log__c/fields/Keep_log_for_last_X_days__c.field-meta.xml
<CustomField>
    <fullName>Keep_log_for_last_X_days__c</fullName>
    <label>Keep log for last X days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>