skdep/force-app/main/default/objects/Monitor_Log__c/fields/Loggin_User__c.field-meta.xml
<CustomField>
    <fullName>Loggin_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loggin User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Monitor_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>