skdep/force-app/main/default/objects/Monitor_Log__c/fields/Logging_Type__c.field-meta.xml
<CustomField>
    <fullName>Logging_Type__c</fullName>
    <label>Logging Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warnning</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>