skdep/force-app/main/default/objects/Monitor_Log__c/fields/Login_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Login_User_Name__c</fullName>
    <formula>Loggin_User__r.FirstName  +&apos; &apos;+ Loggin_User__r.LastName</formula>
    <label>Login User Name</label>
    <type>Text</type>
</CustomField>