skdep/force-app/main/default/objects/Monitor_Log__c/fields/Notification__c.field-meta.xml
<CustomField>
    <fullName>Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification</label>
    <type>Checkbox</type>
</CustomField>