skdep/force-app/main/default/objects/Monitor_Log__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <label>Notification Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>