skdep/force-app/main/default/objects/Monitor_Log__c/fields/Purged_file_Name__c.field-meta.xml
<CustomField>
    <fullName>Purged_file_Name__c</fullName>
    <label>Purged file Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>