skdep/force-app/main/default/objects/Monitor_Log__c/fields/Purging_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Purging_Schedule__c</fullName>
    <label>Purging Schedule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>