skdep/force-app/main/default/objects/Monitor_Log__c/fields/Remote_Address__c.field-meta.xml
<CustomField>
    <fullName>Remote_Address__c</fullName>
    <label>Remote Address</label>
    <type>TextArea</type>
</CustomField>