skdep/force-app/main/default/objects/Monitor_Log__c/fields/Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Request_URL__c</fullName>
    <label>Request URL</label>
    <type>TextArea</type>
</CustomField>