skdep/force-app/main/default/objects/Monitor_Log__c/fields/Response_JSON__c.field-meta.xml
<CustomField>
    <fullName>Response_JSON__c</fullName>
    <label>Response JSON</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>