skdep/force-app/main/default/objects/Monitor_Log__c/fields/Type_Of_Integration__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Integration__c</fullName>
    <label>Type Of Integration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>