skdep/force-app/main/default/objects/Monitor_Log__c/recordTypes/Log.recordType-meta.xml
<RecordType>
    <fullName>Log</fullName>
    <active>true</active>
    <label>Log</label>
</RecordType>