skdep/force-app/main/default/objects/Monitor_Log__c/recordTypes/Scheduler.recordType-meta.xml
<RecordType>
    <fullName>Scheduler</fullName>
    <active>true</active>
    <label>Scheduler</label>
</RecordType>