skdep/force-app/main/default/objects/Monitor_Log__c/validationRules/Concern_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Concern_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Status__c ==true, Concern__c ==false)</errorConditionFormula>
    <errorMessage>Please Check Concern Checkbox</errorMessage>
</ValidationRule>