skdep/force-app/main/default/objects/Monitor_Log__c/validationRules/Record_Relodation.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Relodation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(PRIORVALUE(ReloadStatus__c), &apos;Completed&apos;),
  ISCHANGED(ReloadStatus__c) 
)</errorConditionFormula>
    <errorMessage>Please Contact Your System Administrator records are already reloaded.</errorMessage>
</ValidationRule>