skdep/force-app/main/default/objects/Monitor_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apex_Class__c</columns>
    <columns>RecordId__c</columns>
    <columns>Schedule_Job_Id__c</columns>
    <columns>Status_Code__c</columns>
    <columns>Purged_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>